--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "react-minimal-pie-chart": "^8.3.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.6.0",
     "vite": "^6.3.5"
   },
   "scripts": {
